# apps/docs/public/contracts/openapi-client.json
@@ -438,6 +438,22 @@
         },
         "summary": "Health Runtime Market Data"
       }
+    },
+    "/health/service-ready": {
+      "get": {
+        "operationId": "health_service_ready_health_service_ready_get",
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {}
+              }
+            },
+            "description": "Successful Response"
+          }
+        },
+        "summary": "Health Service Ready"
+      }
     }
   }
 }
